preparation for 1.1.0
fix almost everything : save, refacto, naming, splitPane, ...